src/objects/TMN_User_Delegate__c.object
<CustomObject>
    <description>Assigned Delegates Object for TMN Users</description>
    <fields>
        <fullName>Delegate_Email__c</fullName>
        <description>Email address of Delegate</description>
        <label>Delegate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Delegate_for_Email__c</fullName>
        <description>Email address of the &quot;Delegate for&quot; person</description>
        <label>Delegate for Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Delegate_for_Name__c</fullName>
        <label>Delegate for Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegation_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delegation Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TMN_Delegate_For__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TMN Delegate For</label>
        <referenceTo>TMN_User__c</referenceTo>
        <relationshipLabel>TMN User Delegates (TMN Delegate For)</relationshipLabel>
        <relationshipName>TMN_Delegates_for</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TMN_Delegate_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TMN Delegate Name</label>
        <referenceTo>TMN_User__c</referenceTo>
        <relationshipLabel>TMN User Delegates</relationshipLabel>
        <relationshipName>TMN_Delegate_Names</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Assigned__c</fullName>
        <label>Time Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Removed__c</fullName>
        <label>Time Removed</label>
        <type>DateTime</type>
    </fields>
    <label>TMN User Delegate</label>
    <nameField>
        <label>TMN User Delegate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TMN User Delegates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>